unpackaged/main/default/objects/bt_stripe__Fee__c/bt_stripe__Fee__c.object-meta.xml
<CustomObject>
    <description>Fee is used to store information about fees and taxes</description>
    <label>Fee</label>
    <nameField>
        <label>Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>