unpackaged/main/default/objects/bt_stripe__Fee__c/fields/bt_stripe__Default_Fee__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this Fee will be defaulted. Note: If the default fee already exists, it will be unchecked.</description>
    <inlineHelpText>If checked, this Fee will be defaulted. Note: If the default fee already exists, it will be unchecked.</inlineHelpText>
    <label>Default Fee</label>
    <type>Checkbox</type>
</CustomField>