unpackaged/main/default/objects/bt_stripe__Fee__c/fields/bt_stripe__Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Fee_Percentage__c</fullName>
    <description>The percentage value of the fee</description>
    <inlineHelpText>The percentage value of the fee</inlineHelpText>
    <label>Fee Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>