unpackaged/main/default/objects/bt_stripe__Fee__c/fields/bt_stripe__TaxDisplaySetting__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__TaxDisplaySetting__c</fullName>
    <description>Tax Display Setting determines how taxes are displayed and calculated throughout the site. Please note that taxes are always displayed separately on the final payment screen.</description>
    <inlineHelpText>If Tax-Inclusive Pricing, the advertised price will include tax. If Calculated at Checkout, tax will not be surfaced until the final payment screen.</inlineHelpText>
    <label>Tax Display Setting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>bt_stripe__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Calculated_At_Checkout</fullName>
                <label>Calculated at Checkout</label>
            </value>
            <value>
                <fullName>Tax_Inclusive_Pricing</fullName>
                <label>Tax-Inclusive Pricing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>