unpackaged/main/default/objects/bt_stripe__Fee__c/fields/bt_stripe__Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Type__c</fullName>
    <description>Type is used to distinguish between tax fees and payment processing fees. Each type has a corresponding lookup field on the event object, and have differing functionality.</description>
    <inlineHelpText>Tax is applied to the total after discounts are calculated. Payment processing fees are applied after tax.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Processing</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>