unpackaged/main/default/objects/bt_stripe__Fee__c/validationRules/bt_stripe__TaxTypeRequiresTaxDisplay.validationRule-meta.xml
<ValidationRule>
    <fullName>bt_stripe__TaxTypeRequiresTaxDisplay</fullName>
    <active>true</active>
    <description>When the fee type is Tax, a tax display setting must be selected.</description>
    <errorConditionFormula>IF( AND( ISPICKVAL(bt_stripe__Type__c, &quot;Tax&quot;), ISPICKVAL(bt_stripe__TaxDisplaySetting__c,&quot;&quot;) ), true, false)</errorConditionFormula>
    <errorDisplayField>bt_stripe__TaxDisplaySetting__c</errorDisplayField>
    <errorMessage>You must select a tax display method for tax records.</errorMessage>
</ValidationRule>