unpackaged/main/default/objects/bt_stripe__Fee__c/validationRules/bt_stripe__ValidateFeePercentage.validationRule-meta.xml
<ValidationRule>
    <fullName>bt_stripe__ValidateFeePercentage</fullName>
    <active>true</active>
    <description>Validates that fee percentage is not less than or equal to 0 or more than 100.</description>
    <errorConditionFormula>bt_stripe__Fee_Percentage__c &lt;= 0  ||  bt_stripe__Fee_Percentage__c &gt; 1</errorConditionFormula>
    <errorMessage>Fee percentage must be greater than 0 and may not exceed 100%.</errorMessage>
</ValidationRule>